wrap-up commit for the night. tweaking and bugfixes.

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,7 +1,7 @@
 $darkerBG: #181818;
 $background: #282828;
 $lighterBG: #383838;
-$textColor: gray;
+$textColor: #c0c0c0;
 $highlight: orange;
 
 $gFont: "Merriweather", serif;
@@ -54,16 +54,23 @@ html {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center bottom;
-        background-image: linear-gradient(rgba(28, 28, 28, 0.7), rgba(28, 28, 28, 0.7)), url("../images/background3.jpg");
+        background-image: linear-gradient(rgba(28, 28, 28, 0.8), rgba(28, 28, 28, 0.8)), url("../images/background3.jpg");
       }
-      //       &#about {
-      //       }
+      // &#about {
+      // }
+      &#portfolio {
+        background-attachment: fixed;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        background-image: linear-gradient(rgba(28, 28, 28, 0.8), rgba(28, 28, 28, 0.8)), url("../images/background4.jpg");
+      }
       &#contact {
         background-attachment: fixed;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center bottom;
-        background-image: linear-gradient(rgba(28, 28, 28, 0.7), rgba(28, 28, 28, 0.7)), url("../images/background2.jpg");
+        background-image: linear-gradient(rgba(28, 28, 28, 0.8), rgba(28, 28, 28, 0.8)), url("../images/background2.jpg");
         label {
           color: $highlight;
           float: left;
