--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -2,6 +2,11 @@
 @import "globals";
 
 html {
+  .twospan {
+    justify-self: center;
+    grid-column: 1 / 3;
+  }
+
   #meBubble {
     position: fixed;
     background-image: url(../images/profile_image.jpg);
@@ -12,9 +17,7 @@ html {
     height: 50vh;
     max-width: 400px;
     max-height: 400px;
-    border: 1px
-      solid
-      $highlight;
+    border: 1px solid $highlight;
     border-radius: 50%;
     margin-left: -25vh;
     z-index: 100;
@@ -34,30 +37,22 @@ html {
     height: 100vh;
     width: 200px;
     position: fixed;
-    border-right: 1px
-      solid
-      $highlight;
+    border-right: 1px solid $highlight;
     z-index: 99;
-    box-shadow: 5px
-      0
-      5px;
+    box-shadow: 5px 0 5px;
     margin-left: -300px;
-    transition: margin-left
-      1s;
+    transition: margin-left 1s;
     #menuButton {
       display: none;
     }
     .navButton {
       display: block;
       text-align: center;
-      padding: 1em
-        2em;
+      padding: 1em 2em;
       margin: 1.5em;
       color: $highlight;
       text-decoration: none;
-      border: 1px
-        solid
-        $highlight;
+      border: 1px solid $highlight;
       transition: 200ms;
       &:hover {
         background-color: $highlight;
@@ -77,8 +72,7 @@ html {
     grid-template-columns: 200px 1fr;
     #underheader {
       grid-column: 1;
-      grid-row: 2 /
-        6;
+      grid-row: 2 / 6;
       background-color: $background;
       z-index: 98;
     }
@@ -89,10 +83,7 @@ html {
       text-align: center;
       grid-column: 2;
       margin: 0;
-      padding: 0
-        10px
-        0
-        10px;
+      padding: 0 10px 0 10px;
       width: 100%;
       height: 100%;
       min-height: 100vh;
@@ -115,9 +106,7 @@ html {
         .myName {
           margin-top: 290px;
           padding-bottom: 20px;
-          text-shadow: 2px
-            4px
-            #000000;
+          text-shadow: 2px 4px #000000;
         }
         .greeting {
           position: relative;
@@ -126,9 +115,7 @@ html {
           right: 32vw;
           font-family: $hFont;
           font-size: 1.8em;
-          transform: rotate(
-            -20deg
-          );
+          transform: rotate(-20deg);
         }
         .highlight {
           color: $highlight;
@@ -140,11 +127,12 @@ html {
       box-sizing: border-box;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-gap: 2em
-        5em;
+      grid-gap: 2em 5em;
       align-content: start;
       justify-items: start;
       padding: 4em;
+      // min-height: 100%;
+      // scroll-margin-top: 15vh;
       .title {
         grid-column: 1/3;
       }
