--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -43,8 +43,17 @@ html main section#home {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(28, 28, 28, 0.7)), to(rgba(28, 28, 28, 0.7))), url("../images/background3.jpg");
-  background-image: linear-gradient(rgba(28, 28, 28, 0.7), rgba(28, 28, 28, 0.7)), url("../images/background3.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(28, 28, 28, 0.8)), to(rgba(28, 28, 28, 0.8))), url("../images/background3.jpg");
+  background-image: linear-gradient(rgba(28, 28, 28, 0.8), rgba(28, 28, 28, 0.8)), url("../images/background3.jpg");
+}
+
+html main section#portfolio {
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(28, 28, 28, 0.8)), to(rgba(28, 28, 28, 0.8))), url("../images/background4.jpg");
+  background-image: linear-gradient(rgba(28, 28, 28, 0.8), rgba(28, 28, 28, 0.8)), url("../images/background4.jpg");
 }
 
 html main section#contact {
@@ -52,8 +61,8 @@ html main section#contact {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(28, 28, 28, 0.7)), to(rgba(28, 28, 28, 0.7))), url("../images/background2.jpg");
-  background-image: linear-gradient(rgba(28, 28, 28, 0.7), rgba(28, 28, 28, 0.7)), url("../images/background2.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(28, 28, 28, 0.8)), to(rgba(28, 28, 28, 0.8))), url("../images/background2.jpg");
+  background-image: linear-gradient(rgba(28, 28, 28, 0.8), rgba(28, 28, 28, 0.8)), url("../images/background2.jpg");
 }
 
 html main section#contact label {
@@ -116,7 +125,7 @@ html main section#contact textarea {
 }
 
 html footer {
-  color: gray;
+  color: #c0c0c0;
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
@@ -242,7 +251,7 @@ html main section {
   min-height: 100vh;
   float: right;
   background-color: #282828;
-  color: gray;
+  color: #c0c0c0;
   z-index: 2;
 }
 
